<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vicky 猎头</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="menu_add_job">新增职位</string>
    <string name="menu_add_timeline">新增时间线</string>

    <string name="title_jobs">现有岗位</string>
    <string name="title_search">职位搜索</string>
    <string name="title_topview">大家都在看</string>
    <string name="title_history">我要成功</string>
    <string name="title_contact">与我联系</string>
    <string name="title_settings">系统设置</string>
    <string name="title_job_detail">职位详情</string>
    <string name="title_manage">后台管理</string>
    <string name="title_manage_job">职位管理</string>
    <string name="title_manage_my">我的专栏</string>
    <string name="title_manage_count">数据统计</string>
    <string name="title_manage_data">修改资料</string>
    <string name="title_input">编辑内容</string>
    <string name="title_add_job">新增职位</string>
    <string name="title_edit_job">修改职位</string>
    <string name="title_add_timeline">新增时间线</string>
    <string name="title_edit_timeline">修改时间线</string>
    <string name="title_prop">编辑属性</string>
    <string name="item_work_area_fmt" formatted="false">工作地点:%s</string>
    <string name="item_company_fmt" formatted="false">公司描述:%s</string>
    <string name="hint_input_keyword">输入要搜索的关键字</string>
    <string name="hint_no_connection">没有数据或网络不稳定\n请点击重试...</string>
    <string name="toast_no_more_jobs">没有更多的内容了</string>

    <string name="detail_company_name">公司名称</string>
    <string name="detail_company_desc">公司简介</string>
    <string name="detail_company_heads">公司规模</string>
    <string name="detail_in_heads">招聘人数</string>
    <string name="detail_work_area">工作地区</string>
    <string name="detail_work_years">工作年限</string>
    <string name="detail_education">学历要求</string>
    <string name="detail_salary_range">薪资范围</string>
    <string name="detail_publish_date">发布日期</string>
    <string name="detail_end_date">结束日期</string>
    <string name="detail_job_title">职位名称</string>
    <string name="detail_job_accountability">岗位职责</string>
    <string name="detail_job_requirement">任职要求</string>
    <string name="detail_timeline_text">文章内容</string>

    <string name="history_head_vicky">Vicky 的个人简介</string>
    <string name="history_head_vicky_manage">我的个人简介</string>
    <string name="contact_mail">邮件联系</string>
    <string name="contact_mail_work">工作时间请联系</string>
    <string name="contact_mail_private">非工作时请联系</string>
    <string name="contact_phone">电话联系</string>
    <string name="contact_phone_work">工作时间请联系</string>
    <string name="contact_phone_private">非工作时请联系</string>
    <string name="contact_online">在线联系</string>
    <string name="contact_qq">QQ</string>
    <string name="contact_hangouts">Hangouts</string>
    <string name="contact_wx">微信</string>
    <string name="contact_office">上门联系</string>

    <string name="cat_admin">管理员</string>
    <string name="cat_software">系统</string>
    <string name="pref_admin_enable">登录到管理员身份</string>
    <string name="pref_check_update">检查更新</string>
    <string name="pref_feedback">建议反馈</string>
    <string name="pref_about">关于本软件</string>
    <string name="pref_manage">进入管理员页面</string>

    <string name="pref_summary_not_admin">未登录管理员帐号</string>
    <string name="pref_summary_admin" formatted="false">您是管理员 :%s</string>
    <string name="dialog_account">用户名</string>
    <string name="dialog_password">密码</string>
    <string name="hint">提示</string>
    <string name="edit">修改</string>
    <string name="submit">提交</string>
    <string name="confirm_logout">确实要登出当前管理员帐号吗？</string>
    <string name="msg_account_empty">用户名和密码均不能为空</string>
    <string name="msg_login_error">登录失败，请检查用户名和密码</string>

    <string name="popup_job_edit">修改</string>
    <string name="popup_job_prop">属性</string>
    <string name="popup_job_delete">删除</string>

    <string name="data_succ">保存数据成功</string>
    <string name="data_fail">保存数据失败</string>
    <string name="delete_fail">删除数据失败</string>
    <string name="msg_job_data_empty">公司名称，工作地区，招聘人数和职位名称都是必填的</string>
    <string name="msg_timeline_data_empty">发布日期和文章内容都是必填的</string>
    <string name="msg_saving_data">正在保存数据，请稍候...</string>
    <string name="msg_deleting_date">正在删除数据，请稍候...</string>
    <string name="msg_delete_job">确定要删除这一条职位信息吗？</string>
    <string name="msg_delete_timeline">确定要删除这一条时间线吗？</string>

    <string name="prop_key">关键字</string>
    <string name="prop_emergency">紧急程度</string>
    <string name="prop_color">标题颜色</string>
    <string name="prop_statue">职位状态</string>

    <string name="toast_check_update">正在检查更新</string>
    <string name="toast_no_update">当前已是最新版本</string>
    <string name="toast_update_found" formatted="false">发现新版本，最新版本 :%s\n更新日志：\n%s</string>

    <string name="toast_feedback_empty">反馈的内容不能为空</string>
    <string name="share_title">分享一款优秀的软件</string>
    <string name="share_body">你还在智联、51JOB、猎聘网等网站上海投简历么？作为互联网的精英们，你们ou••ou••out了，只需拿出手机，轻轻一滑，这儿有最新最热的靠谱职位，这有专属你的猎头顾问根据你的要求进行最佳职位匹配，这有专业的面试辅导助力面试•••让你期待的那些好机会近在咫尺。请关注 vickylh.cc.cm 或是下载《Vicky 猎头》手机App。</string>
    <string name="share_job" formatted="false">给您分享一个好职位，来自%s(%s)的%s，详细信息请关注 vickylh.cc.cm 或是下载《Vicky 猎头》手机App来搜索哦:)</string>
    <string name="about_desc">您身边的专业猎头，工作无忧</string>
</resources>
